# nano_banana

./: .gitignore  CLAUDE.md  README.md  TROUBLESHOOTING.md  demo_simple.py  hello.py  nanobanana_pro.py  pyproject.toml  test_basic.py  test_chinese.py  test_startup.py
ai_docs/: gemini-flash-image-preview.md  image_gen_gemini.md
specs/: prd.md
src/: __init__.py  chat_image.py  config.py  convert_2_jpg.py  enhanced_image_browser.py  gemini_client.py  get_image_size.py  i18n.py  image_editing.py  main.py  nano_banana.py  settings.py  templates.py  text_to_image.py  ui.py
